--- a/frontend_angular-v2/src/app/Modules/management/staff/staff.component.css
+++ b/frontend_angular-v2/src/app/Modules/management/staff/staff.component.css
@@ -5,7 +5,7 @@
     padding-top:20px ;
     margin: 0 auto;
     max-width : 1248px;
-    mat-form-field {
+    :is(mat-form-field) {
       width:100% ;
     }
 
