--- a/frontend_angular-v2/src/app/Modules/management/sytem-users/roles/roles.component.css
+++ b/frontend_angular-v2/src/app/Modules/management/sytem-users/roles/roles.component.css
@@ -6,7 +6,7 @@
   padding-top: 20px;
   margin: 0 auto;
   max-width: 1248px;
-  mat-form-field{
-    width: 100%;
-  }
+}
+.main-body :is(mat-form-field) {
+  width: 100%;
 }
